Fixed overlapping of image from text on carousel on iPhone 5

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -356,7 +356,7 @@
       border-radius: 25px;
     }
     .header {
-      margin-bottom: 70px;
+      margin-bottom: 110px;
     }
   }
 /*h1 {
