--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -48,7 +48,7 @@
 }
 @media (max-width: 330px){
   .header{
-    font-size: 40px !important;
+    font-size: 38px !important;
   }
 }
 @media (max-width: 499px){
